[gd_scene load_steps=13 format=3 uid="uid://4ruxg6k6csvd"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/player_form_3.gd" id="1_r56uj"]
[ext_resource type="Resource" uid="uid://mm6el0huhg13" path="res://Data/Movement Data/Form_3.tres" id="2_e2wnv"]
[ext_resource type="Resource" uid="uid://ch28kyub1ntrq" path="res://Data/Stats/Form_3_Stats.tres" id="3_2knpp"]
[ext_resource type="PackedScene" uid="uid://bfmjbl00kj2vc" path="res://Scenes/Components/hurtbox.tscn" id="4_uk43i"]
[ext_resource type="Resource" uid="uid://d36ewhelj2adx" path="res://Data/Fillament Data/Form_03_Fillament_Data.tres" id="4_x0fl5"]
[ext_resource type="AudioStream" uid="uid://f1hsy0bqyg37" path="res://Audio/Sounds/sx_int_tank_on.ogg" id="5_oesr5"]
[ext_resource type="Texture2D" uid="uid://doqaug3kvuagy" path="res://Textures/Characters/KPG-Tank.png" id="5_rpsdh"]
[ext_resource type="AudioStream" uid="uid://dxwi3v4rp7roj" path="res://Audio/Sounds/sx_int_tank_move.ogg" id="6_aliae"]
[ext_resource type="PackedScene" uid="uid://dk1m7whfv7g62" path="res://Scenes/Components/form_3_gun.tscn" id="9_f7n63"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0cslb"]
radius = 13.0
height = 56.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hlgf8"]
size = Vector2(26, 50)

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_vt1fh"]
stream_count = 2
stream_0/stream = ExtResource("6_aliae")
stream_0/volume = -60.0
stream_1/stream = ExtResource("5_oesr5")
stream_1/volume = -10.0

[node name="Form_03" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_r56uj")
movement_data = ExtResource("2_e2wnv")
stats = ExtResource("3_2knpp")
fillament_data = ExtResource("4_x0fl5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -26)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_rpsdh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -28)
shape = SubResource("CapsuleShape2D_0cslb")

[node name="Hurtbox" parent="." groups=["Player"] instance=ExtResource("4_uk43i")]
monitoring = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_hlgf8")

[node name="Launcher" type="Node2D" parent="."]

[node name="DroneLaunchMarker" type="Marker2D" parent="Launcher"]
position = Vector2(-9, -21)

[node name="GunDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DroneCooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Status" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -38.0
offset_right = 24.0
offset_bottom = -15.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayerEngine" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamSynchronized_vt1fh")
volume_db = 2.5
autoplay = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="Form_3_Gun" parent="." instance=ExtResource("9_f7n63")]
position = Vector2(-1, -29)
current_type = 3

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="GunDelay" to="." method="_on_gun_delay_timeout"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
[connection signal="timeout" from="DroneCooldown" to="." method="_on_drone_cooldown_timeout"]
